# mlir-sem

./: .geminiignore  .gitignore  .gitmodules  .ocamlformat  AGENTS.md  GEMINI.md  Makefile.conf  README.md  WORKFLOW_IMPROVEMENTS.md  _CoqProject  dune  dune-project  mlir-sem.opam
.claude/: CLAUDE.md
.claude/skills/: add-pass.md
.claude/skills/add-dialect/: SKILL.md
.claude/skills/add-pass/: SKILL.md
.claude/skills/create-adr/: SKILL.md
.claude/skills/run-golden-test/: SKILL.md
.github/workflows/: build.yml
config/: detect_llvm.ml  dune
docs/adr/: ADR-0001-translation-validation-framework.md  ADR-0002-hybrid-validation-strategy.md
docs/design/: ADR-0001-translation-validation-framework.md  ARCHITECTURE-ANALYSIS.md  ARCHITECTURE-SUMMARY.md  README.md  directory-structure.md
docs/howto/: building-on-linux.md  completing-translation-validation-proofs.md  translation-validation-testing.md  writing-property-tests.md
docs/learning/: ITREE_LEARNING_CHECKPOINT.md
driver/: ast_printer.ml  bindings.ml  coq_exporter.ml  dune  mlir2coq.ml  run.ml  transformer.ml
src/: Main.v  dune
src/Extraction/: Extract.v  dune
src/Learning/: ITreeBasics.v
src/Semantics/: Denotation.v  Events.v  Interp.v  Interpreter.v  Values.v
src/Syntax/: AST.v
src/Theory/: Correctness.v
src/TranslationValidation/: Framework.v  SCCP_Examples.v  SCCP_Simple.v
src/TranslationValidation/Examples/: ConstantFold_Addi.v  ConstantFold_Compute.v  ConstantFold_Simple.v
src/Utils/: DenotationLemmas.v  InterpLemmas.v  Lemmas.v  Tactics.v
test/: README.md  cond_branch.mlir  control_flow.mlir  dune  simple_arith.mlir  test_coq_exporter.ml  test_driver.ml
test/TranslationValidation/: sccp_simple.v  sccp_simple_after.mlir  sccp_simple_before.mlir
test/expect/: cond_branch.ast.expect  cond_branch.output.expect  control_flow.ast.expect  simple_arith.ast.expect  simple_arith.output.expect
test/property/: AST_Properties.v  README.md  dune
test/unit/: dune  test_infrastructure.v
tools/: README.md  check_admitted.sh  mlir_to_coq.py  pre-commit.template  proof_skeleton.sh  setup-hooks.sh  validate_pass.sh
validation/: README.md
validation/oracle/sccp/: sccp_addi.mlir  sccp_addi.opt.mlir  sccp_branch.mlir  sccp_branch.opt.mlir
