opam-version: "2.0"
name: "mlir-sem"
version: "dev"
synopsis: "Denotational Semantics for MLIR in Rocq"
maintainer: "user"
build: [ "dune" "build" "-p" name "-j" jobs ]
install: [ "dune" "install" "-p" name ]
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.14"}
  "dune-configurator"
  "rocq-core" {>= "9.0.0" & < "9.1~"}
  "rocq-stdlib" {>= "9.0.0" & < "9.1~"}
  "coq-ext-lib" {>= "0.13.0" & < "0.14~"}
  "coq-itree" {>= "5.2.0" & < "5.3~"}
  "coq-paco"  {>= "4.2.3" & < "4.3~"}
  "alcotest" {>= "1.9.1"}
  "ctypes-foreign" {>= "0.23.0"}
]
tags: [
  "category:Computer Science/Programming Languages/Formal Definitions and Theory"
  "keyword:semantics"
  "keyword:MLIR"
  "logpath:MlirSem"
]
