(library
 (name driver)
 (modules bindings transformer ast_printer coq_exporter)
 (libraries ctypes ctypes.foreign mlir_sem_extracted zarith)
 (wrapped true))

(executable
(name run)
(public_name driver_run)
(modules run)
 (libraries driver mlir_sem_extracted)
 (link_flags
  (:standard
   %{read-lines:../config/mlir_link_flags.sexp})))

(executable
(name mlir2coq)
(public_name mlir2coq)
(modules mlir2coq)
 (libraries driver mlir_sem_extracted)
 (link_flags
  (:standard
   %{read-lines:../config/mlir_link_flags.sexp})))
