(include_subdirs qualified)

(library
 (name MlirSem)
 (package mlir-sem))

(coq.theory
 (name MlirSem)
 (modules
  Syntax.AST
  Semantics.Values
  Semantics.Events
  Semantics.Denotation
  Semantics.Interp
  Theory.Correctness
  Utils.Tactics
  Utils.Lemmas
  TranslationValidation.Framework
  TranslationValidation.SCCP_Examples
  Main)
 (flags -R src MlirSem)
 (theories Stdlib Paco ITree ExtLib))
