(include_subdirs qualified)

(library
 (name MlirSem)
 (package mlir-sem))

(coq.theory
 (name MlirSem)
 (modules
  Syntax.AST
  Semantics.Values
  Semantics.Events
  Semantics.Denotation
  Semantics.Interp
  Theory.Correctness
  TranslationValidation.Framework
  TranslationValidation.SCCP_Simple
  TranslationValidation.Examples.ConstantFold_Addi
  TranslationValidation.Examples.ConstantFold_Simple
  TranslationValidation.Examples.ConstantFold_Compute
  Utils.Tactics
  Utils.Lemmas
  Utils.InterpLemmas
  Utils.DenotationLemmas
  Main)
 (flags -R src MlirSem)
 (theories Stdlib Paco ITree ExtLib))
