(test
 (name test_driver)
 (libraries driver alcotest mlir_sem_extracted)
 (deps
  (file simple_arith.mlir)
  (file ../validation/oracle/sccp/sccp_addi.mlir)
  (file ../validation/oracle/sccp/sccp_addi.opt.mlir)
  (file ../validation/oracle/sccp/sccp_branch.mlir)
  (file ../validation/oracle/sccp/sccp_branch.opt.mlir))
 (action
 (setenv
  MLIR_TEST_FILE
  %{dep:simple_arith.mlir}
  (setenv
   RUN_EXE_PATH
    %{bin:driver_run}
    (setenv
     MLIR_OPT_PATH
     %{env:MLIR_OPT_PATH=mlir-opt}
     (run %{exe:test_driver.exe} test)))))
(link_flags
 (:standard
   %{read-lines:../config/mlir_link_flags.sexp})))

(test
 (name test_coq_exporter)
 (libraries driver alcotest mlir_sem_extracted))
